public static class AnimationUtils
{
	public const int DELAYED_FINISH_LEVEL_TIME = 2000;// /1000 = sec
	public const int DELAYED_DISTROY_ROBOT_TIME = 1000; // /1000 = sec

	public const string ANIM_NAME_START = "START";
	public const string ANIM_NAME_MOVE = "Move";
	public const string ANIM_NAME_MOVE_X = "MoveX";
	public const string ANIM_NAME_MOVE_Y = "MoveY";
	public const string ANIM_NAME_ATTACK = "Attack";
	public const string ANIM_NAME_HIT = "Hit";
	public const string ANIM_NAME_DIE = "Die";

	public const float ANIM_SLIDER_CHANGE = 1f;
	public const float ANIM_MOVE_IDLE = 0;
}